2004-11-11 Bryan Chan   <b8chan@cgl.uwaterloo.ca>
  * src/UniformPanel.cpp:
  Fixed bugs so that non-f uniforms don't cause the panel to bomb out.
  
2004-11-08 Bryan Chan   <b8chan@cgl.uwaterloo.ca>
  * src/UniformPanel.cpp:
  Small updates to work with variants after storage type branch
  merged into main.

	* src/utilimpl.hpp 
    src/shaders/WorleyShader.cpp
		AlgebraShader.cpp
		Ashikhmin.cpp:
	Replaced c++ typename storage type params with ShValueType 
	enum values.

2004-11-05  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/shaders/SimplePhong.cpp: Made "Simple Phong" simpler.

	* configure.ac: Bump version to 0.7.5 in preparation for imminent release.

	* src/HDRImages/*.hpp: More gcc 3.4 fixes.

	* src/shaders/LCDSmall.cpp (lcdSmall): Remove a redundant
	"template" qualifier for a non-dependent template member function call.

	* src/HDRImages/HDRInterp.hpp: Added many missing "this->" for
	template-dependent parent members. Fixes compilation on gcc-3.4.

2004-10-24  Kevin Moule  <krmoule@cgl.uwaterloo.ca>

	* win32/*: Added Visual Studio .NET solution/project files.

2004-10-22  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/ShrikeFrame.cpp (setShader): Improve error message a little.

	* src/UniformPanel.cpp (setShader): Handle palettes.

	* src/Shader.cpp (Shader::Shader): Initialize m_failed.
	(set_failed): Implement this.
	(failed): Implement this.

	* src/Shader.hpp: Add failed(), set_failed() and m_failed.

	* src/Makefile.am (shrike_SOURCES): Add PaletteExample.cpp.

	* src/shaders/PaletteExample.cpp: Add simple example of using palettes.

	* src/ShrikeFrame.cpp (setShader): Return booleans, handle
	exceptions properly.
	(showError): Implement this function.
	(onShaderSelect): Set shaders to red if they fail to load.

	* src/ShrikeFrame.hpp: Make setShader return a boolean.
	(showError): Add this function.
	
	* src/ShrikeCanvas.cpp: Lots of GL error checking (and ignoring
	for spurious ATI errors for now).
